added h1 title and description

--- a/html_workshop.html
+++ b/html_workshop.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <title>Marketplace App</title>
   </head>
+  <header>
+    <h1>Generic title</h1>
+    <p>Generic title description</p>
+  </header>
   <body>
     <!-- My content goes here-->
-    
   </body>
 </html>
