created <main> and <section> with "products" id

--- a/html_workshop.html
+++ b/html_workshop.html
@@ -10,5 +10,10 @@
   </header>
   <body>
     <!-- My content goes here-->
+    <main>
+        <section id="products">
+            
+        </section>
+    </main>
   </body>
 </html>
