added sections for products details and preview

--- a/html_workshop.html
+++ b/html_workshop.html
@@ -11,9 +11,28 @@
   <body>
     <!-- My content goes here-->
     <main>
-        <section id="products">
-            
-        </section>
+      <section id="products">
+        <div>
+          <h3>Product Name #1</h3>
+          <img src="#" alt="#" />
+          <p>Product Description</p>
+          <ul>
+            Product Details: Price Category, rating, etc.
+          </ul>
+          <div>label and email</div>
+          <button type="button">View Details.</button>
+        </div>
+        <div>
+          <h3>Product Name #2</h3>
+          <img src="#" alt="#" />
+          <p>Product Description</p>
+          <ul>
+            Product Details: Price Category, rating, etc.
+          </ul>
+          <div>label and email</div>
+          <button type="button">View Details.</button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
