--- a/html_workshop.html
+++ b/html_workshop.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <style>
+    body{
+      font-family: Arial, Helvetica, sans-serif;
+      color: #333;
+      background: #d4d0d0;
+    }
+  </style>
   <head>
     <meta charset="UTF-8" />
     <title> </title>
