added header style to css-branch1

--- a/html_workshop.html
+++ b/html_workshop.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <style>
-    body{
+    body {
       font-family: Arial, Helvetica, sans-serif;
       color: #333;
       background: #d4d0d0;
+      padding: 0;
+      margin: 0;
+    }
+    header {
+      background-color: #d10000;
+      color: #ffffff;
+      text-align: center;
+      padding: 20px;
     }
   </style>
   <head>
     <meta charset="UTF-8" />
     <title> </title>
   </head>
- 
-  <body>
 
+  <body>
     <header>
-        <h1>Ogopogo's Web Emporium</h1>
-        <p>Various magical products related to cryptids</p>
-      </header>
-      <h2>Featured Products</h2>
+      <h1>Ogopogo's Web Emporium</h1>
+      <p>Various magical products related to cryptids</p>
+    </header>
+    <h2>Featured Products</h2>
 
     <!-- My content goes here-->
     <main>
       <section id="products">
         <div class="product">
           <h3>Kirin Horn</h3>
-          <img
-            src="placeholder-600x400.png"
-            alt="#"
-          />
+          <img src="placeholder-600x400.png" alt="#" />
           <p>Product Description</p>
           <ul>
             <li>Price: 499.999 Zenys</li>
@@ -41,10 +45,7 @@
         </div>
         <div class="product">
           <h3>Bigfoot Hair</h3>
-          <img
-            src="placeholder-600x400.png"
-            alt="#"
-          />
+          <img src="placeholder-600x400.png" alt="#" />
           <p>Product Description</p>
           <ul>
             <li>Price: 15000 Zenys/bundle</li>
@@ -58,10 +59,7 @@
       </section>
     </main>
   </body>
-  <br/>
+  <br />
 
-  <div class="footer">
-    &copy;
-Ogopogo Ltd. Inc. LLC LDC Foundation
-  </div>
+  <div class="footer">&copy; Ogopogo Ltd. Inc. LLC LDC Foundation</div>
 </html>
