added section style and centering

--- a/html_workshop.html
+++ b/html_workshop.html
@@ -14,6 +14,14 @@
       text-align: center;
       padding: 20px;
     }
+    section {
+      margin-top: 20px;
+      margin-bottom: 20px;
+      margin: auto;
+      width: 50%;
+    }
+
+    
   </style>
   <head>
     <meta charset="UTF-8" />
