added style to class product

--- a/html_workshop.html
+++ b/html_workshop.html
@@ -20,7 +20,20 @@
       margin: auto;
       width: 50%;
     }
-
+    h2 {
+      color: #4caf50;
+      text-align: center;
+    }
+    .product {
+      margin-left: auto;
+      margin-right: auto;
+      padding: 10px;
+      max-width: 600px;
+      border: #ddd;
+      border-width: 1px;
+      border-style: solid;
+      border-radius: 1px;
+    }
     
   </style>
   <head>
@@ -49,7 +62,7 @@
             <li>Electrifies you.</li>
           </ul>
           <div>Email: billybob@monsterhunter.com</div>
-          <button type="button">View Details.</button>
+          <button type="button">View Details</button>
         </div>
         <div class="product">
           <h3>Bigfoot Hair</h3>
@@ -62,7 +75,7 @@
             <li>Waterproof.</li>
           </ul>
           <div>Email: billybob@monsterhunter.com</div>
-          <button type="button">View Details.</button>
+          <button type="button">View Details</button>
         </div>
       </section>
     </main>
