adjusted footer style and spacing between products

--- a/html_workshop.html
+++ b/html_workshop.html
@@ -24,7 +24,18 @@
       color: #4caf50;
       text-align: center;
     }
-    .product {
+    .product1 {
+      margin-left: auto;
+      margin-right: auto;
+      padding: 10px;
+      max-width: 600px;
+      border: #ddd;
+      border-width: 1px;
+      border-style: solid;
+      border-radius: 5px;
+      margin-bottom: 50px;
+    }
+    .product2 {
       margin-left: auto;
       margin-right: auto;
       padding: 10px;
@@ -39,14 +50,23 @@
       max-width: 100%;
       border-radius: 5px;
     }
-    .email-field{
+    .email-field {
       margin-bottom: 15px;
     }
-    button{
-      background: #4CAF50;
+    button {
+      background: #4caf50;
       color: #fff;
       padding: 5px;
       border: none;
+    }
+    .footer {
+      margin-top: 50px;
+      padding: 30px;
+      background-color: #000000;
+      border-radius: 5px;
+      box-shadow: orange;
+      text-align: center;
+      color: #fff;
     }
   </style>
   <head>
@@ -64,7 +84,7 @@
     <!-- My content goes here-->
     <main>
       <section id="products">
-        <div class="product">
+        <div class="product1">
           <h3>Kirin Horn</h3>
           <img class="product-image" src="placeholder-600x400.png" alt="#" />
           <p>Product Description</p>
@@ -77,7 +97,7 @@
           <div class="email-field">Email: billybob@monsterhunter.com</div>
           <button type="button">View Details</button>
         </div>
-        <div class="product">
+        <div class="product2">
           <h3>Bigfoot Hair</h3>
           <img class="product-image" src="placeholder-600x400.png" alt="#" />
           <p>Product Description</p>
